# waterrower-websocket-server

./: .gitignore  mock_server.py  pyproject.toml
resources/: events.json
src/waterrower_websocket_server/: interface.py  main.py  rower.py  server.py
tests/: test_server.py
