
[project]
name = "waterrower-websocket-server"
version = "0.1.0"
dependencies = [
    "pyserial",
    "websockets",
]


[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
waterrower-websocket-server = "waterrower_websocket_server.main:main"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"